fix: fix CartSummary on small screens

--- a/src/components/Main/Cart/CartSummary/CartSummary.module.css
+++ b/src/components/Main/Cart/CartSummary/CartSummary.module.css
@@ -56,13 +56,38 @@
 }
 
 @media screen and (max-width: 980px) {
+  .voucher_icon {
+    display: none;
+  }
+
   .cart_total {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr;
+    gap: 1rem;
     width: 100%;
     height: max-content;
     top: var(--header-height);
-    flex-direction: row;
     padding: 1rem;
     border-top: 0.2rem solid var(--accent-color-light);
     font-size: 1.8rem;
+  }
+
+  .promo_code {
+    grid-row: 1 / 3;
+    grid-column-start: 2;
+    gap: 1rem;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .promo_code {
+    padding: 0.5rem;
+  }
+
+  .cart_total,
+  .input,
+  .submit_promo {
+    font-size: 1.5rem;
   }
 }
